[package]
name = "rust-mqtt"
version = "0.3.0"
authors = ["Ondrej Babec <ond.babec@gmail.com>"]
edition = "2021"
resolver = "2"
description = "MQTT client for both embedded and non-embedded devices"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/obabec/rust-mqtt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8"
rand_core = "0.6"
defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
embedded-io = "0.6"
embedded-io-async = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
embedded-io = "0.6"
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }
embedded-io-async = { version = "0.6" }
tokio-test = { version = "0.4.2" }
env_logger = "0.10.1"
futures = { version = "0.3.21" }
log = { version = "0.4.14" }
serial_test = "3.0.0"

[features]
default = ["std"]
std = ["embedded-io/std", "log"]
no_std = ["defmt"]
tls = []
