[package]
name = "rust-mqtt"
version = "0.4.1"
authors = [
    "Ondrej Babec <ond.babec@gmail.com>",
    "Julian Graf <julian.jg.graf@gmail.com>",
]
edition = "2024"
rust-version = "1.87"
resolver = "2"
description = "MQTT client for embedded and non-embedded environments"
readme = "README.md"
license = "MIT"
repository = "https://github.com/obabec/rust-mqtt"
keywords = ["embedded", "async", "mqtt", "no_std"]
categories = ["embedded", "network-programming", "no-std"]
exclude = [".github", ".ci"]

[dependencies]
embedded-io-async = { version = "0.7.0" }

heapless = "0.9.2"

defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

const_fn = "0.4.11"


[dev-dependencies]
embedded-io-adapters = { version = "0.7.0", features = ["tokio-1"] }
pin-project-lite = "0.2.16"
tokio = { version = "1.48.0", features = [
    "net",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-test = "0.4.4"
test-log = "0.2.19"
log = "0.4.28"
env_logger = "0.11.8"
embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls.git", rev = "0348d4e15e31fd2666560c25bcf9601df625380a", default-features = false, features = [
    "webpki",
    "std",
    "log",
] }
rand = "0.8"
pem-parser = "0.1.1"
signature = "2.2.0"
p256 = "0.13.2"


[features]
default = ["v5", "alloc"]

log = ["dep:log"]
defmt = ["dep:defmt", "embedded-io-async/defmt"]

bump = []
alloc = []

v3 = []
v5 = []

request-response = []


[[example]]
name = "demo"

[[example]]
name = "tls"
