[package]
name = "rust-mqtt"
version = "0.0.1"
authors = ["Ondrej Babec <ond.babec@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
heapless = "0.7.10"
rand_core = "0.6.0"

tokio = { version = "1", features = ["full"], optional = true }
tokio-test = { version = "0.4.2", optional = true}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"

[features]
default = ["tokio", "std", "tokio-test"]
std = []
no_std = []