[package]
name = "rust-mqtt"
version = "0.0.1"
authors = ["Ondrej Babec <ond.babec@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.10"
rand_core = "0.6.0"
defmt = { version = "0.3", optional = true }

log = { version = "0.4.14", optional = true }
tokio = { version = "1", features = ["full"], optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = { version = "0.4.2"}
env_logger = "0.9.0"
log = { version = "0.4.14"}

[features]
default = ["testing"]
testing = ["tokio", "std", "log"]
std = []
no_std = ["defmt"]