[package]
name = "drogue-network"
version = "0.0.1"
authors = ["Ondrej Babec <ond.babec@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
defmt = { version = "0.3" }
rust-mqtt = { path = "../../mqtt", features = ["no_std"], default-features = false }
drogue-device = { path = "/drogue-device/device", features = ["time"], default-features = false }